--- a/client/src/Resources/Stylesheets/defaultlayout.css
+++ b/client/src/Resources/Stylesheets/defaultlayout.css
@@ -1,33 +1,38 @@
-.layout{
-    height: 100vh;
-    padding: 20px 50px;
+.layout {
+  height: 100vh;
+  padding: 20px 50px;
 }
 
-.header{
-    height: 10%;
-    background-color: rgba(0, 0, 0, 0.85);
-    border-radius: 5px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
+.header {
+  height: 8%;
+  background-color: #000c40;
+  color: white;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
 }
 
-.header h1{
-    color: rgba(255, 255, 255, 0.5);
-    font-size: 22px;
+.header h1 {
+  font-size: 2rem;
+  color: white;
+  padding-top: 12px;
 }
 
-.header button{
-    border: 1px solid white !important;
-    color: rgba(255, 255, 255, 0.589) !important;
+.content {
+  height: 87%;
+  border: 1px solid gray;
+  margin-top: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 3px rgba(128, 128, 128, 0.486);
+  padding: 20px;
 }
 
-.content{
-    height: 87%;
-    border: 1px solid gray;
-    margin-top: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 3px rgba(128, 128, 128, 0.486);
-    padding: 10px;
+.iconButton {
+  background-color: white !important;
+  color: black !important;
+  display: flex;
+  align-items: center;
+  font-size: 1.2 rem;
 }
