--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 
 body {
   margin: 0;
-  font-family: 'Montserrat', sans-serif !important;
+  font-family: "Montserrat", sans-serif !important;
 }
 
-button{
+button {
   background-color: rgba(0, 0, 0, 0.85) !important;
   box-shadow: none !important;
   outline: none !important;
@@ -13,39 +13,40 @@ button{
   color: white !important;
 }
 
-input , textarea{
+input,
+textarea {
   box-shadow: none !important;
   outline: none !important;
   border: 1px solid gray !important;
-  
 }
 
-input:focus , textarea:focus{
+input:focus,
+textarea:focus {
   outline: none !important;
   box-shadow: none !important;
 }
 
-.ant-spin{
+.ant-spin {
   position: absolute !important;
   top: 50%;
   left: 50%;
-  transform: translate(-50% , -50%);
+  transform: translate(-50%, -50%);
   z-index: 10;
 }
-.ant-btn-dashed{
+.ant-btn-dashed {
   background: white !important;
   color: black !important;
   border: 1px dashed gray !important;
   width: 200px !important;
 }
 
-.divider{
+.divider {
   width: 100%;
   height: 2px;
   background-color: gray;
 }
 
-.back-btn{
+.back-btn {
   background-color: white !important;
   color: black !important;
   border: 1px solid black !important;
