--- a/client/src/Resources/Stylesheets/templates.css
+++ b/client/src/Resources/Stylesheets/templates.css
@@ -3,7 +3,10 @@
   box-shadow: #000c40;
   padding: 20px;
   position: relative;
-  width: 350px;
+}
+
+.template {
+  width:350px;
 }
 
 .home .template .text {
@@ -14,6 +17,15 @@
   right: 0;
   opacity: 0;
 }
+
+.text {
+  padding: 0 20px;
+}
+
+.template {
+  border: 3px solid #000c40;
+}
+
 .home .template .text:hover {
   background-color: #000c40;
   opacity: 0.8;
@@ -49,6 +61,13 @@
   background-color: #000c40 !important;
   padding: 10px;
   color: white;
+}
+
+.semiHighlightedHeading {
+  background-color: #000c40 !important;
+  padding: 10px;
+  color: white;
+  width: 32%;
 }
 
 .templateParent {
